--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <button onclick="monthDown()">&lt;</button>
                 <span id="calendar-month">MARCH 2023</span>
                 <button onclick="monthUp()">&gt;</button>
+                <button onclick="gotoToday()">T</button>
             </h2>
 
             <table id="calendar-table">
@@ -37,17 +38,39 @@
                     <th>FRI</th>
                     <th>SAT</th>
                 </tr>
-                <!-- JS will create table cells here-->
+                <!-- calendar.js will create table cells here-->
+                <!-- cell's inner html is defined in updateCalendarCell in template.js -->
+                <!-- cell class is "calendar-cell" -->
             </table>
 
         </div>
 
         <div id="date-event">
-            awdawd
+            <h2>Date Select</h2>
+
+            <ul id="date-event-list">
+                <!-- will be filled by updateEventList in template.js -->
+            </ul>
+
+            <form>
+                <select>
+                    <option disabled selected>วิชา</option>
+                </select>
+                <select>
+                    <option disabled selected>ประเภทงาน</option>
+                </select>
+                <select>
+                    <option disabled selected>วันเดือนปี</option>
+                </select>
+                <input placeholder="Task Name" />
+                <button>Submit</button>
+            </form>
         </div>
     </div>
 
-    <script src="scripts.js"></script>
+    <script src="event.js"></script>
+    <script src="template.js"></script>
+    <script src="calendar.js"></script>
 </body>
 
 </html>
