--- a/index.html
+++ b/index.html
@@ -68,9 +68,11 @@
         </div>
     </div>
 
-    <script src="event.js"></script>
-    <script src="template.js"></script>
-    <script src="calendar.js"></script>
+    <script type="module" src="firebase_init.js"></script>
+    <script type="module" src="api.js"></script>
+    <script type="module" src="event.js"></script>
+    <script type="module" src="template.js"></script>
+    <script type="module" src="calendar.js"></script>
 </body>
 
 </html>
