Add notification system

--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
 
     <script type="module" src="firebase_init.js"></script>
     <script type="module" src="api.js"></script>
+    <script type="module" src="notification.js"></script>
     <script type="module" src="event.js"></script>
     <script type="module" src="template.js"></script>
     <script type="module" src="calendar.js"></script>
