--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!doctype html>
 
-<html lang="en">
+<html lang="en" class="theme-light">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Website Name</title>
+    <title>Scalendar</title>
     <meta property="og:type" content="website">
 
     <link rel="icon" href="/favicon.ico">
@@ -18,28 +18,66 @@
 </head>
 
 <body>
-    <h1>Web name</h1>
+    <div>
+        <h1 id="header" style="text-align:left;float:left;">Scalendar</h1>
+        <select id="Theme-select" style="float:right;" onchange="SwitchTheme()">
+            <option value="light" selected>Light theme</option>
+            <option value="dark">Dark theme</option>
+        </select>
+    </div>
+    <script>
+        // function to set a given theme/color-scheme
+        function setTheme(themeName) {
+            localStorage.setItem('theme', themeName);
+            document.documentElement.className = themeName;
+        }
+
+        // function to toggle between light and dark theme
+        function SwitchTheme() {
+            if (document.getElementById("Theme-select").value=="light") {
+                setTheme('theme-light');
+            } else if (document.getElementById("Theme-select").value=="dark") {
+                setTheme('theme-dark');
+            }
+        }
+
+        // Immediately invoked function to set the theme on initial load
+        (function () {
+            if (localStorage.getItem('theme') === 'theme-dark') {
+                setTheme('theme-dark');
+            } else {
+                setTheme('theme-light');
+            }
+        })();
+    </script>
+
+    <hr style="clear:both;"/>
+    <h3 style="float:right" class="float-div"><div class='box _BG'></div> = อื่นๆ</h3>
+    <h3 style="float:right" class="float-div"><div class='box HWBG'></div> = การบ้าน</h3>
+    <h3 style="float:right" class="float-div"><div class='box ExamBG'></div> = สอบ</h3>
+    <h3 style="clear:both;"></h3>
+
     <div id="main-content">
         <div id="calendar">
             <h2>
-                <button onclick="monthDown()">&lt;</button>
+                <button onclick="monthDown()" title="previous month">&lt;</button>
                 <span id="calendar-month">
                     <!-- text content will be replace with appropriate month/year, in updateCalendar in calendar.js-->
                     MONTH YEAR
                 </span>
-                <button onclick="monthUp()">&gt;</button>
-                <button onclick="gotoToday()">T</button>
+                <button onclick="monthUp()" title="next month">&gt;</button>
+                <button onclick="gotoToday()" title="move to today">T</button>
             </h2>
 
             <table id="calendar-table">
                 <tr>
-                    <th>SUN</th>
-                    <th>MON</th>
-                    <th>TUE</th>
-                    <th>WED</th>
-                    <th>THU</th>
-                    <th>FRI</th>
-                    <th>SAT</th>
+                    <th style="color: #ff0000" class="stroke">SUN</th>
+                    <th style="color: #ffee00"class="stroke">MON</th>
+                    <th style="color: #f5c0cb"class="stroke">TUE</th>
+                    <th style="color: #008000"class="stroke">WED</th>
+                    <th style="color: #ffa500"class="stroke">THU</th>
+                    <th style="color: #32dfd2"class="stroke">FRI</th>
+                    <th style="color: #800080"class="stroke">SAT</th>
                 </tr>
                 <!-- calendar.js will create table cells here-->
                 <!-- cell's inner html is defined in updateCalendarCell in template.js -->
@@ -60,15 +98,35 @@
             </ul>
 
             <form action="#" id="date-event-form" onsubmit="submitEvent(event)">
-                <select name="subject" selected="" required>
+                <!-- <select name="subject" selected="" required>
                     <option disabled selected value="">วิชา</option>
                     <option value="Cal">Cal</option>
-                </select>
+                    <option value="PRGMTH">ProgMeth</option>
+                    <option value="CEES">ComEngEss</option>
+                    <option value="EXPENG">ExpEng</option>
+                    <option value="GCHEM">GenChem</option>
+                    <option value="CHEMLAB">GenChemLab</option>
+                    <option value="GPHYS">GenPhys</option>
+                    <option value="PHYSLAB">GenPhysLab</option>
+                </select> -->
+
+                <input type="text" name="subject" list="Subject" placeholder="Subject" required>
+                    <datalist id="Subject">
+                        <option>Cal</option>
+                        <option>ProgMeth</option>
+                        <option>ComEngEss</option>
+                        <option>ExpEng</option>
+                        <option>GenChem</option>
+                        <option>GenChemLab</option>
+                        <option>GenPhys</option>
+                        <option>GenPhysLab</option>
+                    </datalist>
+
                 <select name="type" selected="" required>
                     <option disabled selected value="">ประเภทงาน</option>
-                    <option value="Exam">สอบ</option>
-                    <option value="HW">การบ้าน</option>
-                    <option value="_">อื่นๆ</option>
+                    <option value="Exam" class="Exam">สอบ</option>
+                    <option value="HW" class="HW">การบ้าน</option>
+                    <option value="_" class="_">อื่นๆ</option>
                 </select>
                 <select name="difficulity" selected="" required>
                     <option disabled selected value="">ความยาก</option>
@@ -102,5 +160,4 @@
         };
     </script>
 </body>
-
 </html>
