Aligning color legend

--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
     </script>
 
     <hr style="clear:both;"/>
-    <h3 style="float:right" class="float-div"><div class='box _BG'></div> = อื่นๆ</h3>
-    <h3 style="float:right" class="float-div"><div class='box HWBG'></div> = การบ้าน</h3>
-    <h3 style="float:right" class="float-div"><div class='box ExamBG'></div> = สอบ</h3>
+    <div style="float:right;">
+        <h3 class="float-div"><div class='box ExamBG'></div> = สอบ</h3>
+        <h3 class="float-div"><div class='box HWBG'></div> = การบ้าน</h3>
+        <h3 class="float-div"><div class='box _BG'></div> = อื่นๆ</h3>
+    </div>
     <h3 style="clear:both;"></h3>
 
     <div id="main-content">
