Align color legend

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </script>
 
     <hr style="clear:both;"/>
-    <div style="float:right;">
+    <div style="float:right; margin-bottom: 15px;">
         <h3 class="float-div"><div class='box ExamBG'></div> = สอบ</h3>
         <h3 class="float-div"><div class='box HWBG'></div> = การบ้าน</h3>
         <h3 class="float-div"><div class='box _BG'></div> = อื่นๆ</h3>
