--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- meta name="viewport" content="width=device-width, initial-scale=1" -->
+    <meta name="viewport" content="">
 
     <title>Scalendar</title>
     <meta property="og:type" content="website">
